[package]
name = "nimbuspulse-client"
description = "NimbusPulse API client"
homepage = "https://nimbuspulse.com"
repository = "https://github.com/NimbusPulse/sdk"
license-file = "MIT"
readme = "../README.md"
keywords = ["dcs", "dcs-world", "nimbuspulse", "sdk", "api"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
tokio = { version = "1.40", features = ["full"] }
ts-rs = { version = "10.0", features = ["format", "uuid", "uuid-impl"] }
