[package]
name = "nimbuspulse-client"
description = "NimbusPulse API client"
homepage = "https://nimbuspulse.com"
repository = "https://github.com/NimbusPulse/sdk"
license = "MIT"
readme = "../README.md"
keywords = ["dcs", "dcs-world", "nimbuspulse", "sdk", "api"]
version = "0.1.3"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[target.'cfg(not(test))'.dependencies]
tokio = { version = "1.40", features = ["full"] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
uuid = { version = "1.10", features = ["v7", "serde"] }

[dev-dependencies]
ts-rs = { version = "10.0", features = ["format", "uuid", "uuid-impl"] }
