[package]
name = "nimbuspulse-client"
description = "NimbusPulse API client"
homepage = "https://nimbuspulse.com"
repository = "https://github.com/NimbusPulse/sdk"
license = "MIT"
readme = "README.md"
keywords = ["dcs", "dcs-world", "nimbuspulse", "sdk", "api"]
version = "0.2.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[target.'cfg(not(test))'.dependencies]
tokio = { version = "1.50", features = ["full"] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream"] }
uuid = { version = "1.22", features = ["v7", "serde"] }
